made it more responsive

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
          rel="stylesheet"
       />
       <!--Scripts-->
+      <script src="responsive.js"></script>
       <script src="global.js" defer></script>
       <script src="one.js" defer></script>
    </head>
@@ -52,7 +53,7 @@
 
       <section id="code">
          <div class="row">
-            <div class="col l6 m12 s12 center">
+            <div class="col l6 m12 s12 center responsive">
                <h4 class="center">Global Variable file(js)</h4>
                <img
                   src="codeImages/globalJS.png"
@@ -60,7 +61,7 @@
                   alt="Img_Not_Found"
                />
             </div>
-            <div class="col l6 m12 s12 center">
+            <div class="col l6 m12 s12 center responsive">
                <h4 class="center">Accessing the global variables file(js)</h4>
                <img
                   src="codeImages/oneJS.png"
