moved scripts to a folder

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
          rel="stylesheet"
       />
       <!--Scripts-->
-      <script src="responsive.js"></script>
-      <script src="global.js" defer></script>
-      <script src="one.js" defer></script>
+      <script src="scripts/responsive.js"></script>
+      <script src="scripts/global.js" defer></script>
+      <script src="scripts/one.js" defer></script>
    </head>
    <body>
       <section id="intro">
